--- a/index.html
+++ b/index.html
@@ -5,68 +5,94 @@
     <meta charset="UTF-8">
     <!-- import your css file -->
     <link href="https://fonts.googleapis.com/css?family=Gaegu|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
     <title>Sweet Eats Bakery</title>
 </head>
 
-<body>
-
+<body class="container">
+<header>
+    <div>
     <!-- company name -->
-    Sweet Eats Bakery
-
-    <!-- Navigation -->
-    About
-    Cookies
-    Celebrations
-    Catering
-    Contact
-    
+    <h1>Sweet Eats Bakery</h1> 
+    </div>
+<!-- Navigation -->
+    <section class= "content-row">   
+        <div>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#cookies">Cookies</a>
+                <a href="#celebrations">Celebrations</a>
+                <a href="#catering">Catering</a>
+                <a href="#contact">Contact</a>
+            </nav>  
+        </div>
+    </section>
     <!-- Image https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png -->
-
+        <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png"/>  
+</header>
     <!-- Marketing header -->
-    About Sweet Eats Bakery
-
-    Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop
-    donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy
-    powder.
-
+<section id="about" class="about-section">
+    <h2>About Sweet Eats Bakery</h2>
+    <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy powder.</p>
+</section>  
     <!-- content -->
-
+<section class="container">
+    <div id="cookies" class="content-row">
+        <div>
     <!-- Image https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png -->
-    Cookies
-
-    Cookie soufflé dessert carrot cake fruitcake halvah pudding cake. Marzipan topping bear claw soufflé gingerbread
-    biscuit. Tiramisu gummi bears chocolate bar sugar plum icing muffin cake jelly-o icing.
-    
+            <img src="https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png" alt=""/>
+        </div>
+        <div>
+            <h2>Cookies</h2>
+             <p>Cookie soufflé dessert carrot cake fruitcake halvah pudding cake. Marzipan topping bear claw soufflé gingerbread biscuit. Tiramisu gummi bears chocolate bar sugar plum icing muffin cake jelly-o icing.</p>
+        </div>
+    </div>
+    <div id="celebrations" class="content-row">
+        <div>
     <!-- Image https://tk-assets.lambdaschool.com/297378d6-9c89-430f-9d2e-46ae3d5edce8_ui-i-bakery-cupcake-i.png -->
-    Celebrations
-
-    Candy apple pie lemon drops sweet roll danish. Tiramisu candy canes jelly-o jelly beans cotton candy pastry pudding
-    tootsie roll carrot cake. Dessert sesame snaps brownie lemon drops cookie donut dragée. Toffee pie fruitcake powder
-    gingerbread pudding.
-
+            <img src="https://tk-assets.lambdaschool.com/297378d6-9c89-430f-9d2e-46ae3d5edce8_ui-i-bakery-cupcake-i.png" alt=""/>
+        </div>
+        <div>
+         <h2>Celebrations</h2>
+                <p>Candy apple pie lemon drops sweet roll danish. Tiramisu candy canes jelly-o jelly beans cotton candy pastry pudding tootsie roll carrot cake. Dessert sesame snaps brownie lemon drops cookie donut dragée. Toffee pie fruitcake powder gingerbread pudding.</p> 
+        </div>
+    </div>
+    <div id="catering" class="content-row">
+        <div>
+        <img src="https://tk-assets.lambdaschool.com/ab0cb095-5900-476c-b042-aea065d3dbbf_ui-i-bakery-celebrate.png" alt=""/>
      <!-- Image https://tk-assets.lambdaschool.com/ab0cb095-5900-476c-b042-aea065d3dbbf_ui-i-bakery-celebrate.png -->
-    Catering
-
-    Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie
-    lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.
-
-    Contact Us
-
-    yum@sweeteatsbakery.com
-    202-555-0144
-    4209 Bobcat Drive
-    Madison, WI, 48219
-
+        </div>
+        <div>
+            <h2>Catering</h2>
+                <p>Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.</p> 
+        </div>
+    </div>
+</section>
+<section class="contact-section" id="contact">
+    <h2>Contact Us</h2>
+        <a href="mailto:yum@sweeteatsbakery.com">yum@sweeteatsbakery.com</a><br>
+        <a href="tel:202-555-0144">202-555-0144</a>    
+        <address>4209 Bobcat Drive<br>
+        Madison, WI, 48219</address>   
+</section>
     <!-- footer -->
-    Sweet Eats Bakery
-
-    About
-    Cookies
-    Celebrations
-    Catering
-    Contact
-
-    Copyright Sweet Eats 2018
+<footer>
+    <section>
+        <div class="footer-content">
+            <h3>Sweet Eats Bakery</h3>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#cookies">Cookies</a>
+                <a href="#celebrations">Celebrations</a>
+                <a href="#catering">Catering</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+        <div class="footer-content copyright">
+            <p class="footer-content copyright">Copyright Sweet Eats 2018</p>
+        </div>
+    </section>
+</footer>
 </body>
 
 </html>
